# effective-octo-eureka

./: .gitignore  CMakeLists.txt  README.md  compile_tests.bat  run_tests.sh
include/: AuthScreen.h  Database.h  PasswordValidator.h
src/: AuthScreen.cpp  Database.cpp  PasswordValidator.cpp  main.cpp
tests/: CMakeLists.txt  README.md  test_database.cpp  test_integration.cpp  test_password_validator.cpp  test_performance.cpp  test_recovery.cpp  test_security.cpp  test_system.cpp  test_usability.cpp
